# real-time-networks

./: .travis.yml  CMakeLists.txt  CMakeListsPy.txt  README.md  SupervisedImprinting.cpp  adapting_sarsa.cpp  autograd_test.py  compile.sh  copy_task_cfg.sh  copy_task_parallel.sh  mnist_imprinting.cpp  mountaincar_control.py  mountaincar_control_expanding.py  py_example.py  recurrent_test_case.cpp  requirements.txt  rl_exp.cpp  run.sh  run_copy_task.cu  run_mc.cpp  run_tmaze.cpp  run_tmaze.cu  simple_exp.cpp  simple_exp.cu  simple_nn.cpp  test_case.cpp  tmaze_run.sh  traceconditioning_CAN.cpp  tracepatterning_exp.cpp  train_CAN.py  train_gym.py  two_output_v.cpp
.github/workflows/: cmake.yml  codeql-analysis.yml  cpplint.yml  cpplint_modified_files.yml
cpu_implementation/: CMakeLists.txt  simple_nn.cpp  test.py
cpu_implementation/include/: utils.h
cpu_implementation/include/neural_networks/: neural_network.h  neuron.h  synapse.h
cpu_implementation/src/: utils.cpp
cpu_implementation/src/neural_network/: neural_network.cpp  neuron.cpp  synapse.cpp
experiment_notebooks/: 0001_mc_pred_tc.ipynb  0002_mc_pred_fixed_imprinting.ipynb  0003_mc_pred_lowest_replacement_imprinting.ipynb
include/: utils.h
include/agents/: sarsa.h
include/animal_learning/: tracecondioning.h
include/environments/: copy_task.h  mountain_car.h  supervised_imprinting.h  tmaze.h
include/experiment/: Database.h  Experiment.h  Metric.h
include/neural_networks/: dynamic_elem.h  message.h  neural_network.h  neuron.h  synapse.h  utils.h
include/nn/: dynamic_elem.h  message.h  neural_network.h  neuron.h  synapse.h  synced_neuron.h  synced_synapse.h  (+1 more)
pybind_interface/: adaptive_network_int.cpp  interface.cpp  network_interface.cpp
python_scripts/: feedforward_autograd_gradient.py
results_notebooks/: 002_tmaze_prediction.ipynb  003_tmaze_reg_longer.ipynb  004-tmaze_exp_to_0.ipynb  005-tmaze_prediction_limit_actions.ipynb  005_tmaze_prediction_baseline.ipynb  006_tmaze_prediction_baseline_smaller.ipynb  007_tmz_cntrl_bptt.ipynb  008_tmz_pred_can.ipynb  009_tmz_pred_can_no_trace_reset.ipynb  010_tmz_pred_can_20_features.ipynb  011_tmz_pred_can_10_features.ipynb  012_tmz_pred_can_no_noop.ipynb  013_tmz_pred_can_trace_test.ipynb  014_tmz_pred_can_trace_pred_hacky.ipynb  015_tmz_pred_comparison.ipynb  copy_task_nominL.ipynb  tmaze_results.ipynb
src/: Experiment.cpp  add.cu  utils.cpp
src_python/: recurrence_autograd_gradient.py
state_feature/: base_state_feature.py  state_feature_util.py
tests/: CMakeLists.txt  catch_amalgamated.cpp  catch_amalgamated.hpp  compile.sh  feedforward_testcase.cpp  recurrence_tests.cpp  recurrence_tests.h  test.cpp  test_add_delete_case.cpp  test_normal_case.cpp  test_skip_case.cpp
tests/include/: feedforward_gradient_testcase.h  fixed_feedforward_network.h  fixed_recurrent_network.h  gradient_testcases.h  random_data_generator.h  test_case_networks.h  test_cases.h
tests/python_tests/: add_delete_test.py  normal_test.py  skip_test.py
tests/src/: feedforward_gradient_testcase.cpp  fixed_feedforward_network.cpp  fixed_recurrent_network.cpp  mountain_car_test.cpp  network_implementations.cpp  random_data_generator.cpp  recurrent_gradient_testcase.cpp  sarsa_test.cpp  target_without_sideffects.cpp  utility_propagation.cpp
tests/src/catch3/: catch_amalgamated.cpp
vis/: gen.sh
(+105 files in other folders)
